// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disabled by default 1`] = `
<div>
  <input
    onChange={[Function]}
  />
  <button
    disabled={true}
    type="submit"
  >
    click me
  </button>
</div>
`

exports[`Disabled by default 2`] = `
<div>
  <input
    onChange={[Function]}
  />
  <button
    disabled={false}
    type="submit"
  >
    click me
  </button>
</div>
`

exports[`Disabled by default 3`] = `
<div>
  <input
    onChange={[Function]}
  />
  <button
    disabled={true}
    type="submit"
  >
    click me
  </button>
</div>
`
